# olea

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  config.py  olea-m.py  olea.code-workspace  olea_m.py  path.py  pyproject.toml  wsgi.py
config/: __init__.py  default.py  development.py
configs/: __init__.py  base_config.example.py  production.example.py  urls.example.toml
docs/: auto_title_v2_190527.py  g.md  naming.md  naming_explaination.md  onedrive_init  properties.md  redis.md
docs/archieves/: onedrive_init.py
docs/prototypes/: 01_pwd_hash_time_consumption.py  02_01_collision_chance_of_id.py  02_02_find_generator_of_Z67.py  02_03_id_type_I_chance.py  README.md
jsonform/: __init__.py  errors.py  fields.py  form.py  logic_ops.py
migrations/: env.py
migrations/versions/: 36f9001e7692.py  4502d6b4665e.py  fbec951a3be2.py
models/: __init__.py  ann.py  away.py  chat.py  common_enums.py  duck.py  lemon.py  mango.py  pink.py  pit.py  proj.py  role.py
olea/: __init__.py  base.py  dep_graph.py  email_mgr.py  exts.py  gunicorn_conf.py  hooks.py  id_tool.py  olea_path.py  singleton.py  utils.py
olea/auth/: __init__.py  authentication.py  authorization.py  duck_permission.py  lemon_auth.py
olea/blueprints/: __init__.py  base_mgr.py
olea/blueprints/auth/: __init__.py  custom_conditions.py  forms.py  ip.py  pwd_tools.py  services.py  views.py
olea/blueprints/msg/: __init__.py  forms.py  query.py  services.py  views.py
olea/blueprints/o3o/: __init__.py  forms.py  quality_control.py  services.py  utils.py  views.py
olea/blueprints/pink/: __init__.py  custom_conditions.py  forms.py  pwd_tools.py  query.py  services.py  text_tools.py  views.py
olea/blueprints/pit/: __init__.py  forms.py  quality_control.py  query.py  services.py  utils.py  views.py
olea/blueprints/proj/: __init__.py  custom_fields.py  forms.py  info_builder.py  query.py  querys.py  services.py  views.py
olea/blueprints/sys/: __init__.py  views.py
olea/configs/: base_conf.py  production.example.py  url_mgr.py
olea/core/: __init__.py  base.py  dep_graph.py  singleton.py  utils.py
olea/core/auth/: authentication.py  authorization.py
olea/core/blueprints/auth/: forms.py  pwd_tools.py  services.py  views.py
olea/core/blueprints/msg/: query.py  services.py  views.py
olea/core/blueprints/pink/: query.py  services.py  views.py
olea/core/blueprints/pit/: query.py  services.py  utils.py  (+1 more)
olea/core/errors/: __init__.py  auth_fail.py  bad_opt.py  base_error.py  data_conflict.py  quality_control.py
olea/errors/: __init__.py  auth_fail.py  bad_opt.py  base_error.py  data_conflict.py  quality_control.py
olea/init/: __init__.py  command.py  hook.py  shellcontext.py
olea/models/: __init__.py  ann.py  common_enums.py  mango.py  pink.py  pit.py  proj.py  role.py
pypat/: __init__.py  encoder.py  pat.py  serilizer.py  signer.py
scripts/: auto.py  build_init_for_errors.py  build_init_for_models.py  clean_pycache.py  error_code.py  fetch_graph_token.py  init_db.ps1  save_token.py  update_ipdb.py
scripts/alan/: __init__.py  clean_pycache.py  file_helpers.py  fix_init.py  g.py  version.py
scripts/alan/models/: detect_classes.py
scripts/auto_gen/: __init__.py  file_helpers.py  fix_init.py  version.py
scripts/auto_gen/errors/: __init__.py  error_code.py  fix_error_code.py
scripts/auto_gen/models/: __init__.py  detect_classes.py
scripts/design/: collision_chance.py  id_type_I.py
scripts/dev/: auto_error_code.py  build_init_for_errors.py  build_init_for_models.py  clean_pycache.py  measure.py
scripts/manage/: save_token.py
templates/: new_pink.html
(+4 files in other folders)
