[tool.poetry]
name = "olea"
version = "2.1.0"
description = ""
authors = ["Pix-00 <15878537+Pix-00@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.1"
flask = "^1.1.2"
flask-json = "^0.3.4"
flask-sqlalchemy = "^2.4.3"
flask-migrate = "^2.5.3"
flask-redis = "^0.4.0"
psycopg2 = "^2.8.5"
passlib = { extras = ["argon2"], version = "^1.7.2" }
jsonschema = "^3.2.0"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"
lxml = "^4.5.1"
msal = "^1.4.1"
sentry-sdk = { extras = ["flask", "sqlalchemy", "redis"], version = "^0.16.0" }
ip2location = "^8.4.1"

[tool.poetry.dev-dependencies]
isort = "^5.0.2"
yapf = "^0.30.0"
flake8 = "^3.8.3"
mypy = "^0.782"
pytest = "^5.4.3"
pre-commit = "^2.6.0"

[tool.isort]
force_to_top = "false"
line_length = 100

[tool.pylint.messages_control]
disable = """,
    invalid-name,
    import-outside-toplevel,
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,

    """

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
