[tool.poetry]
name = "olea"
version = "2.1.0"
description = ""
authors = ["Pix-00 <15878537+Pix-00@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
flask = "^1.1.2"
flask-json = "^0.3.4"
flask-sqlalchemy = "^2.4.4"
flask-migrate = "^2.6.0"
flask-redis = "^0.4.0"
psycopg2 = "^2.8.5"
passlib = { extras = ["argon2"], version = "^1.7.4" }
jsonschema = "^3.2.0"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.1"
msal = "^1.12.0"
sendgrid = "^6.6.0"
sentry-sdk = { extras = ["flask", "sqlalchemy", "redis"], version = "^1.1.0" }
ip2location = "^8.5.1"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
yapf = "^0.30.0"
flake8 = "^3.8.4"
pytest = "^6.2.2"
pre-commit = "^2.10.1"

[tool.isort]
force_to_top = "false"
line_length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
